[gd_scene load_steps=17 format=2]

[ext_resource path="res://fonts/gameboy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sumProj/chooseMap.gd" type="Script" id=2]
[ext_resource path="res://img/69e4cc7c-29a2-472c-b35f-a899ac5ef803_rw_1920.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/8-BIT WONDER.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://audio/a-hero-of-the-80s-126684.mp3" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0.772549, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )

[node name="chooseMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -4.0
margin_right = 1024.0
margin_bottom = 603.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -312.5
margin_top = 99.0
margin_right = 312.5
margin_bottom = 202.0
custom_colors/font_color = Color( 0, 0.0313726, 0.47451, 1 )
custom_fonts/font = SubResource( 1 )
text = "CHOOSE YOUR 
SUMO MAP"
align = 1

[node name="grass" type="Button" parent="."]
margin_left = 312.0
margin_top = 256.0
margin_right = 499.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "GRASS"

[node name="cloud" type="Button" parent="."]
margin_left = 544.0
margin_top = 256.0
margin_right = 754.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
text = "Clouds"

[node name="castle" type="Button" parent="."]
margin_left = 296.0
margin_top = 344.0
margin_right = 518.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Castle"

[node name="dawn" type="Button" parent="."]
margin_left = 536.0
margin_top = 344.0
margin_right = 758.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 11 )
text = "space"

[node name="return1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -69.0
margin_right = -2.0
margin_bottom = -49.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0.458824, 0.905882, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Return"
align = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[connection signal="pressed" from="grass" to="." method="_on_grass_pressed"]
[connection signal="pressed" from="cloud" to="." method="_on_cloud_pressed"]
[connection signal="pressed" from="castle" to="." method="_on_castle_pressed"]
[connection signal="pressed" from="dawn" to="." method="_on_dawn_pressed"]
[connection signal="pressed" from="return1" to="." method="_on_return1_pressed"]
